# enum-from-functions.rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  cicd.yml
src/: extract.rs  generate.rs  lib.rs
