[package]
name = "enum-from-functions"
description = """A procedural macro that will create an enum with associated functions that each have a corresponding \
variant."""
version = "0.1.1"
repository = "https://github.com/speelbarrow/enum-from-functions.rs"
authors = ["Noah Friedman"]
license = "OSL-3.0"
documentation = "https://docs.rs/crates/enum-from-functions"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
quote = "1.0.32"
syn = { version = "2.0.27", features = ["full", "extra-traits"] }
